--- a/order.html
+++ b/order.html
@@ -30,7 +30,7 @@
       function closePopup() {
         popup.classList.remove("open-popup");
       }
-      document.getElementById("bt").onclick = function () {
+      document.getElementById("btn").onclick = function () {
         window.location.href = "index.html";
       };
     </script>
